--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
+    "node-tesseract": "^0.2.7",
     "pug": "^2.0.3",
+    "puppeteer": "^2.1.1",
     "tesseract.js": "^2.0.2"
   },
   "devDependencies": {
